boreal/tests/assets/invalid_files/parsing/xor_invalid_value3.yar
// [error: syntax error]
rule a {
    strings:
        $a = "a" xor(-50-5)
    condition:
        $a
}
